# LD2410-SecurityCam

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  test.py
src/ld2410_securitycam/: ftp.py  logger.py  main.py  motion.py  utils.py  video.py
